added tsd support for jquery

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="Content/game.css">
 </head>
 <body>
+    <!-- Javascript Libraries -->
+    <script src="Scripts/lib/dist/jquery.min.js"></script>
     
-    <!-- Javascript -->
+    <!-- Game Javascript -->
     <script src="Scripts/objects/person.js"></script>
     <script src="Scripts/objects/student.js"></script>
     <script src="Scripts/core/game.js"></script>
